delete accordion images

--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@
                 maxime repudiandae fuga molestias ducimus vitae perferendis
                 architecto at, nihil necessitatibus ratione!
               </p>
-              <img
-                class="accordion-image"
-                src="assets/images/cycloneStudios/accordion-image-1.jpg"
-                alt="Cyclone"
-              />
+              <div class="accordion-background"></div>
             </div>
           </div>
           <div class="accordion-panel">
@@ -115,11 +111,7 @@
                 quam fugit pariatur molestias veniam veritatis omnis! Aperiam
                 exercitationem minus asperiores saepe debitis.
               </p>
-              <img
-                class="accordion-image"
-                src="assets/images/cycloneStudios/accordion-image-2.jpg"
-                alt="Cyclone"
-              />
+              <div class="accordion-background"></div>
             </div>
           </div>
           <div class="accordion-panel">
@@ -151,11 +143,7 @@
                 temporibus nobis? Velit odit in possimus dolore dolorum non
                 incidunt alias.
               </p>
-              <img
-                class="accordion-image"
-                src="assets/images/cycloneStudios/accordion-image-3.jpg"
-                alt="Cyclone"
-              />
+              <div class="accordion-background"></div>
             </div>
           </div>
           <div class="accordion-panel">
@@ -187,11 +175,7 @@
                 iste? Eaque, ut? Odio reprehenderit vitae ducimus, ab atque
                 tenetur labore quaerat.
               </p>
-              <img
-                class="accordion-image"
-                src="assets/images/cycloneStudios/accordion-image-4.jpg"
-                alt="Cyclone"
-              />
+              <div class="accordion-background"></div>
             </div>
           </div>
           <div class="accordion-panel">
@@ -223,11 +207,7 @@
                 repellat exercitationem, quae accusantium sequi ad, illo fuga
                 quisquam itaque minima iure ipsum voluptate.
               </p>
-              <img
-                class="accordion-image"
-                src="assets/images/cycloneStudios/accordion-image-5.jpg"
-                alt="Cyclone"
-              />
+              <div class="accordion-background"></div>
             </div>
           </div>
         </div>
