remove cursor on touch devices

--- a/index.html
+++ b/index.html
@@ -230,22 +230,22 @@
       </div>
     </main>
 
-    <div id="cyclone-cursor">
+    <div id="cyclone-cursor" class="no-cursor-element">
       <img
         id="cyclone-c"
         src="assets/images/logos/cyclone-c.gif"
         alt="Cyclone Studios C Logo"
       />
     </div>
-
+<!-- 
     <figure>
-      <!-- <figcaption>EXP</figcaption> -->
+      <figcaption>EXP</figcaption>
       <audio
         controls
         autoplay
         loop
         src="assets/audio/echoing-voices.mp3"
       ></audio>
-    </figure>
+    </figure> -->
   </body>
 </html>
