adjust panel background style + add scroll overflow to accordion panel content

--- a/index.html
+++ b/index.html
@@ -78,8 +78,20 @@
                 dignissimos laudantium, harum dicta fugiat ullam expedita non
                 maxime repudiandae fuga molestias ducimus vitae perferendis
                 architecto at, nihil necessitatibus ratione!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+                quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
+                dolor sit amet consectetur adipisicing elit. Deleniti unde
+                dignissimos laudantium, harum dicta fugiat ullam expedita non
+                maxime repudiandae fuga molestias ducimus vitae perferendis
+                architecto at, nihil necessitatibus ratione!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
+                quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
+                dolor sit amet consectetur adipisicing elit. Deleniti unde
+                dignissimos laudantium, harum dicta fugiat ullam expedita non
+                maxime repudiandae fuga molestias ducimus vitae perferendis
+                architecto at, nihil necessitatibus ratione!
               </p>
-              <div class="accordion-background"></div>
+              <!-- <img class="accordion-image" src="#" alt="#"> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -111,7 +123,7 @@
                 quam fugit pariatur molestias veniam veritatis omnis! Aperiam
                 exercitationem minus asperiores saepe debitis.
               </p>
-              <div class="accordion-background"></div>
+              <!-- <img class="accordion-image" src="#" alt="#"> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -143,7 +155,7 @@
                 temporibus nobis? Velit odit in possimus dolore dolorum non
                 incidunt alias.
               </p>
-              <div class="accordion-background"></div>
+              <!-- <img class="accordion-image" src="#" alt="#"> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -175,7 +187,7 @@
                 iste? Eaque, ut? Odio reprehenderit vitae ducimus, ab atque
                 tenetur labore quaerat.
               </p>
-              <div class="accordion-background"></div>
+              <!-- <img class="accordion-image" src="#" alt="#"> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -207,7 +219,7 @@
                 repellat exercitationem, quae accusantium sequi ad, illo fuga
                 quisquam itaque minima iure ipsum voluptate.
               </p>
-              <div class="accordion-background"></div>
+              <!-- <img class="accordion-image" src="#" alt="#"> -->
             </div>
           </div>
         </div>
@@ -230,7 +242,7 @@
       </div>
     </main>
 
-    <div id="cyclone-cursor" class="no-cursor-element">
+    <div id="cyclone-cursor" class="no-cursor-element hidden">
       <img
         id="cyclone-c"
         src="assets/images/logos/cyclone-c.gif"
