give accordion panels the smoke 💭

--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
                 dolor sit amet consectetur adipisicing elit. Deleniti unde
                 dignissimos laudantium, harum dicta fugiat ullam expedita non
                 maxime repudiandae fuga molestias ducimus vitae perferendis
-                architecto at, nihil necessitatibus ratione!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-                quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
-                dolor sit amet consectetur adipisicing elit. Deleniti unde
-                dignissimos laudantium, harum dicta fugiat ullam expedita non
-                maxime repudiandae fuga molestias ducimus vitae perferendis
-                architecto at, nihil necessitatibus ratione!
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-                quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
-                dolor sit amet consectetur adipisicing elit. Deleniti unde
-                dignissimos laudantium, harum dicta fugiat ullam expedita non
-                maxime repudiandae fuga molestias ducimus vitae perferendis
-                architecto at, nihil necessitatibus ratione!
+                architecto at, nihil necessitatibus ratione! Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. Dolorem quibusdam
+                exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit
+                amet consectetur adipisicing elit. Deleniti unde dignissimos
+                laudantium, harum dicta fugiat ullam expedita non maxime
+                repudiandae fuga molestias ducimus vitae perferendis architecto
+                at, nihil necessitatibus ratione! Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Dolorem quibusdam exercitationem
+                sed voluptatum inventore. Lorem, ipsum dolor sit amet
+                consectetur adipisicing elit. Deleniti unde dignissimos
+                laudantium, harum dicta fugiat ullam expedita non maxime
+                repudiandae fuga molestias ducimus vitae perferendis architecto
+                at, nihil necessitatibus ratione!
               </p>
-              <!-- <img class="accordion-image" src="#" alt="#"> -->
+              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
             </div>
           </div>
           <div class="accordion-panel">
@@ -123,7 +123,11 @@
                 quam fugit pariatur molestias veniam veritatis omnis! Aperiam
                 exercitationem minus asperiores saepe debitis.
               </p>
-              <!-- <img class="accordion-image" src="#" alt="#"> -->
+              <img
+                class="accordion-image"
+                src="assets/images/cycloneStudios/cloudy.gif"
+                alt="Cloudy"
+              />
             </div>
           </div>
           <div class="accordion-panel">
@@ -155,7 +159,7 @@
                 temporibus nobis? Velit odit in possimus dolore dolorum non
                 incidunt alias.
               </p>
-              <!-- <img class="accordion-image" src="#" alt="#"> -->
+              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
             </div>
           </div>
           <div class="accordion-panel">
@@ -187,7 +191,7 @@
                 iste? Eaque, ut? Odio reprehenderit vitae ducimus, ab atque
                 tenetur labore quaerat.
               </p>
-              <!-- <img class="accordion-image" src="#" alt="#"> -->
+              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
             </div>
           </div>
           <div class="accordion-panel">
@@ -219,7 +223,7 @@
                 repellat exercitationem, quae accusantium sequi ad, illo fuga
                 quisquam itaque minima iure ipsum voluptate.
               </p>
-              <!-- <img class="accordion-image" src="#" alt="#"> -->
+              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
             </div>
           </div>
         </div>
@@ -249,7 +253,7 @@
         alt="Cyclone Studios C Logo"
       />
     </div>
-<!-- 
+    <!-- 
     <figure>
       <figcaption>EXP</figcaption>
       <audio
