--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 repudiandae fuga molestias ducimus vitae perferendis architecto
                 at, nihil necessitatibus ratione!
               </p>
-              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
+              <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -123,11 +123,7 @@
                 quam fugit pariatur molestias veniam veritatis omnis! Aperiam
                 exercitationem minus asperiores saepe debitis.
               </p>
-              <img
-                class="accordion-image"
-                src="assets/images/cycloneStudios/cloudy.gif"
-                alt="Cloudy"
-              />
+              <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -159,7 +155,7 @@
                 temporibus nobis? Velit odit in possimus dolore dolorum non
                 incidunt alias.
               </p>
-              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
+              <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -191,7 +187,7 @@
                 iste? Eaque, ut? Odio reprehenderit vitae ducimus, ab atque
                 tenetur labore quaerat.
               </p>
-              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
+              <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
           </div>
           <div class="accordion-panel">
@@ -223,7 +219,7 @@
                 repellat exercitationem, quae accusantium sequi ad, illo fuga
                 quisquam itaque minima iure ipsum voluptate.
               </p>
-              <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy">
+              <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
           </div>
         </div>
