--- a/index.html
+++ b/index.html
@@ -249,15 +249,15 @@
         alt="Cyclone Studios C Logo"
       />
     </div>
-    <!-- 
+    
     <figure>
-      <figcaption>EXP</figcaption>
+      <!-- <figcaption>Echoing Voices</figcaption> -->
       <audio
         controls
         autoplay
         loop
         src="assets/audio/echoing-voices.mp3"
       ></audio>
-    </figure> -->
+    </figure>
   </body>
 </html>
