add content to about section & .gitignore

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           ✕
         </button>
         <div id="cyclone-accordion">
-          <div class="accordion-panel">
-            <h2 id="panel1-title" class="h2">
+          <section class="accordion-panel">
+            <h3 id="panel1-title" class="h3">
               <button
                 class="accordion-trigger"
                 aria-controls="panel1-content"
@@ -62,7 +62,7 @@
                   <use xlink:href="#cyclone-studios-c"></use>
                 </svg>
               </button>
-            </h2>
+            </h3>
             <div
               class="accordion-content"
               id="panel1-content"
@@ -70,32 +70,23 @@
               aria-labelledby="panel1-title"
               role="region"
             >
-              <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-                quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
-                dolor sit amet consectetur adipisicing elit. Deleniti unde
-                dignissimos laudantium, harum dicta fugiat ullam expedita non
-                maxime repudiandae fuga molestias ducimus vitae perferendis
-                architecto at, nihil necessitatibus ratione! Lorem ipsum dolor
-                sit amet consectetur adipisicing elit. Dolorem quibusdam
-                exercitationem sed voluptatum inventore. Lorem, ipsum dolor sit
-                amet consectetur adipisicing elit. Deleniti unde dignissimos
-                laudantium, harum dicta fugiat ullam expedita non maxime
-                repudiandae fuga molestias ducimus vitae perferendis architecto
-                at, nihil necessitatibus ratione! Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Dolorem quibusdam exercitationem
-                sed voluptatum inventore. Lorem, ipsum dolor sit amet
-                consectetur adipisicing elit. Deleniti unde dignissimos
-                laudantium, harum dicta fugiat ullam expedita non maxime
-                repudiandae fuga molestias ducimus vitae perferendis architecto
-                at, nihil necessitatibus ratione!
+              <img class="about-image" src="assets/images/logos/cycloneStudios.svg" alt="Cyclone Studios™ Logo">
+              <h2>
+                creative technological assembly specialists.
+              </h2>
+              <p class="accordion-paragaph">
+                Cyclone Studios™ is a collective that supplies web, mobile & game development services based in New York City. We also provide creative direction, marketing/promotion, audio engineering & more. 
+                <!-- We are currently currently preparing to offer our creative technological services to the public. -->
+              </p>
+              <p class="accordion-paragaph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem earum delectus esse omnis unde voluptatibus, nisi incidunt provident ratione hic totam ducimus dolor iusto molestiae repudiandae consectetur voluptatum harum quisquam!
+              Eius distinctio possimus expedita voluptas commodi laudantium amet nisi sed doloremque vero tenetur non, aliquam nesciunt dignissimos corrupti quo vitae est. Quaerat deleniti recusandae ipsam repudiandae similique praesentium alias! Maxime.
+              Eos quisquam corrupti deleniti at iure blanditiis similique incidunt hic aperiam minima, inventore consequuntur pariatur voluptate doloremque nostrum cupiditate rerum voluptatem aliquam impedit, mollitia vero. Laudantium quasi aut aliquam magnam!
               </p>
               <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
-          </div>
-          <div class="accordion-panel">
-            <h2 id="panel2-title" class="h2">
+          </section>
+          <section class="accordion-panel">
+            <h3 id="panel2-title" class="h3">
               <button
                 class="accordion-trigger"
                 aria-controls="panel2-content"
@@ -106,7 +97,7 @@
                   <use xlink:href="#cyclone-studios-c"></use>
                 </svg>
               </button>
-            </h2>
+            </h3>
             <div
               class="accordion-content"
               id="panel2-content"
@@ -115,7 +106,7 @@
               role="region"
             >
               <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
-              <p>
+              <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
                 dolor sit amet consectetur adipisicing elit. Mollitia
@@ -125,9 +116,9 @@
               </p>
               <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
-          </div>
-          <div class="accordion-panel">
-            <h2 id="panel3-title" class="h2">
+          </section>
+          <section class="accordion-panel">
+            <h3 id="panel3-title" class="h3">
               <button
                 class="accordion-trigger"
                 aria-controls="panel3-content"
@@ -138,7 +129,7 @@
                   <use xlink:href="#cyclone-studios-c"></use>
                 </svg>
               </button>
-            </h2>
+            </h3>
             <div
               class="accordion-content"
               id="panel3-content"
@@ -147,7 +138,7 @@
               role="region"
             >
               <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
-              <p>
+              <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem ipsum,
                 dolor sit amet consectetur adipisicing elit. Omnis, quasi in
@@ -157,9 +148,9 @@
               </p>
               <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
-          </div>
-          <div class="accordion-panel">
-            <h2 id="panel4-title" class="h2">
+          </section>
+          <section class="accordion-panel">
+            <h3 id="panel4-title" class="h3">
               <button
                 class="accordion-trigger"
                 aria-controls="panel4-content"
@@ -170,7 +161,7 @@
                   <use xlink:href="#cyclone-studios-c"></use>
                 </svg>
               </button>
-            </h2>
+            </h3>
             <div
               class="accordion-content"
               id="panel4-content"
@@ -179,7 +170,7 @@
               role="region"
             >
               <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
-              <p>
+              <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
                 dolor sit amet consectetur adipisicing elit. Labore animi
@@ -189,9 +180,9 @@
               </p>
               <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
-          </div>
-          <div class="accordion-panel">
-            <h2 id="panel5-title" class="h2">
+          </section>
+          <section class="accordion-panel">
+            <h3 id="panel5-title" class="h3">
               <button
                 class="accordion-trigger"
                 aria-controls="panel5-content"
@@ -202,7 +193,7 @@
                   <use xlink:href="#cyclone-studios-c"></use>
                 </svg>
               </button>
-            </h2>
+            </h3>
             <div
               class="accordion-content"
               id="panel5-content"
@@ -211,7 +202,7 @@
               role="region"
             >
               <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
-              <p>
+              <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem ipsum
                 dolor, sit amet consectetur adipisicing elit. Molestiae
@@ -221,7 +212,7 @@
               </p>
               <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
-          </div>
+          </section>
         </div>
         <svg width="0" height="0" class="hidden">
           <symbol
