--- a/index.html
+++ b/index.html
@@ -70,17 +70,33 @@
               aria-labelledby="panel1-title"
               role="region"
             >
-              <img class="about-image" src="assets/images/logos/cycloneStudios.svg" alt="Cyclone Studios™ Logo">
-              <h2>
-                creative technological assembly specialists.
+              <img
+                class="about-image"
+                src="assets/images/logos/cycloneStudios.svg"
+                alt="Cyclone Studios™ Logo"
+              />
+              <h2 class="accordion-heading">
+                creative technological experimentalists.
               </h2>
               <p class="accordion-paragaph">
-                Cyclone Studios™ is a collective that supplies web, mobile & game development services based in New York City. We also provide creative direction, marketing/promotion, audio engineering & more. 
-                <!-- We are currently currently preparing to offer our creative technological services to the public. -->
+                Cyclone Studios™ is a collective that supplies web, mobile &
+                game development services based in New York City. We also
+                provide creative direction, marketing/promotion, audio
+                engineering & more.
               </p>
-              <p class="accordion-paragaph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem earum delectus esse omnis unde voluptatibus, nisi incidunt provident ratione hic totam ducimus dolor iusto molestiae repudiandae consectetur voluptatum harum quisquam!
-              Eius distinctio possimus expedita voluptas commodi laudantium amet nisi sed doloremque vero tenetur non, aliquam nesciunt dignissimos corrupti quo vitae est. Quaerat deleniti recusandae ipsam repudiandae similique praesentium alias! Maxime.
-              Eos quisquam corrupti deleniti at iure blanditiis similique incidunt hic aperiam minima, inventore consequuntur pariatur voluptate doloremque nostrum cupiditate rerum voluptatem aliquam impedit, mollitia vero. Laudantium quasi aut aliquam magnam!
+              <p class="accordion-paragaph">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem
+                earum delectus esse omnis unde voluptatibus, nisi incidunt
+                provident ratione hic totam ducimus dolor iusto molestiae
+                repudiandae consectetur voluptatum harum quisquam! Eius
+                distinctio possimus expedita voluptas commodi laudantium amet
+                nisi sed doloremque vero tenetur non, aliquam nesciunt
+                dignissimos corrupti quo vitae est. Quaerat deleniti recusandae
+                ipsam repudiandae similique praesentium alias! Maxime. Eos
+                quisquam corrupti deleniti at iure blanditiis similique incidunt
+                hic aperiam minima, inventore consequuntur pariatur voluptate
+                doloremque nostrum cupiditate rerum voluptatem aliquam impedit,
+                mollitia vero. Laudantium quasi aut aliquam magnam!
               </p>
               <!-- <img class="accordion-image" src="assets/images/cycloneStudios/cloudy.gif" alt="Cloudy"/> -->
             </div>
@@ -105,7 +121,7 @@
               aria-labelledby="panel2-title"
               role="region"
             >
-              <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+              <h2 class="accordion-heading">⚠️ UNDER CONSTRUCTION</h2>
               <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
@@ -137,7 +153,7 @@
               aria-labelledby="panel3-title"
               role="region"
             >
-              <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+              <h2 class="accordion-heading">⚠️ UNDER CONSTRUCTION</h2>
               <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem ipsum,
@@ -169,7 +185,7 @@
               aria-labelledby="panel4-title"
               role="region"
             >
-              <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+              <h2 class="accordion-heading">⚠️ UNDER CONSTRUCTION</h2>
               <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem, ipsum
@@ -201,7 +217,7 @@
               aria-labelledby="panel5-title"
               role="region"
             >
-              <p class="under-construction">⚠️ UNDER CONSTRUCTION</p>
+              <h2 class="accordion-heading">⚠️ UNDER CONSTRUCTION</h2>
               <p class="accordion-paragaph">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
                 quibusdam exercitationem sed voluptatum inventore. Lorem ipsum
@@ -240,7 +256,7 @@
         alt="Cyclone Studios C Logo"
       />
     </div>
-    
+
     <figure>
       <!-- <figcaption>Echoing Voices</figcaption> -->
       <audio
