add under construction to about

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                 engineering & more.
               </p>
               <p class="accordion-paragaph">
+                ⚠️ UNDER CONSTRUCTION 
+                <br>
+                <br>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem
                 earum delectus esse omnis unde voluptatibus, nisi incidunt
                 provident ratione hic totam ducimus dolor iusto molestiae
