add meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Creative technological experimentalists. Transform your business with cutting-edge technology solutions from our leading tech agency. We specialize in delivering innovative software development, web design, and digital marketing strategies tailored to your unique needs. Boost your online presence, streamline operations, and stay ahead of the competition with our expert team of tech enthusiasts. Contact us today for a consultation and let us take your business to new heights in the digital realm."
+    />
     <title>Cyclone Studios™</title>
     <link
       rel="icon"
@@ -85,9 +89,9 @@
                 engineering & more.
               </p>
               <p class="accordion-paragaph">
-                ⚠️ UNDER CONSTRUCTION 
-                <br>
-                <br>
+                ⚠️ UNDER CONSTRUCTION
+                <br />
+                <br />
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem
                 earum delectus esse omnis unde voluptatibus, nisi incidunt
                 provident ratione hic totam ducimus dolor iusto molestiae
