remove selectability & pointer events from cyclone studios banner in about section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               role="region"
             >
               <img
-                class="about-image"
+                class="about-image no-select"
                 src="assets/images/logos/cycloneStudios.svg"
                 alt="Cyclone Studios™ Logo"
               />
