adjust about banner styles

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
               role="region"
             >
               <img
-                class="about-image no-select"
+                id="about-banner"
+                class="no-select"
                 src="assets/images/logos/cycloneStudios.svg"
                 alt="Cyclone Studios™ Logo"
               />
